# blackjack

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  release-plz.toml
.github/workflows/: ci.yml  deploy.yml  release-pr.yml
.understand-anything/: .understandignore
.understand-anything/tmp/: ua-import-map-input.json  ua-import-map-output.json  ua-scan-files.json
adr/: 0001-event-sourcing-for-game-state.md  0001-system-architecture.md  0002-cqrs-command-event-separation.md  0002-poc-in-memory-implementation.md  0003-player-lifecycle-observer-model.md  0003-postgresql-event-store.md  0004-balance-as-wallet-concern.md  0004-websocket-event-delivery.md  0005-seat-enum-and-deal-order.md  0005-snapshot-strategy.md  0006-kafka-event-bus.md  0007-engine-worker-architecture.md  index.md  vision.md
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: app.rs  main.rs
cli/src/animation/: deal.rs  mod.rs
cli/src/app/: event.rs  keys.rs  mod.rs  state.rs
cli/src/input/: keyboard.rs  mod.rs
cli/src/mock/: mod.rs  ui_states.rs
cli/src/state/: betting.rs  cards.rs  lobby.rs  login.rs  mod.rs  table.rs  ui_state.rs
cli/src/ui/: card.rs  footer.rs  header.rs  history.rs  layout.rs  lobby.rs  login.rs  mod.rs  observers.rs  player_turn_popup.rs  round_result_popup.rs  table.rs  table_view.rs  theme.rs  waiting_list.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core-lib/: Cargo.toml  README.md
core-lib/src/domain/: mod.rs
core-lib/src/domain/card/: deck.rs  mod.rs  rank.rs  suit.rs
core-lib/src/domain/dealer/: mod.rs
core-lib/src/domain/engine/: action.rs  game_state.rs  mod.rs  phase.rs
core-lib/src/domain/engine/command/: mod.rs  player_command.rs
core-lib/src/domain/engine/event/: game_event.rs  mod.rs  payload.rs
core-lib/src/domain/hand/: mod.rs
core-lib/src/domain/player/: mod.rs
core/benches/: game_engine.rs
core/src/: lib.rs
core/src/domain/: mod.rs  seat.rs
core/src/domain/card/: deck.rs  mod.rs  rank.rs  shoe.rs  suit.rs
core/src/domain/dealer/: dealer_state.rs  mod.rs
core/src/domain/engine/: action.rs  error.rs  game_engine.rs  game_id.rs  game_state.rs  mod.rs  phase.rs  snapshot.rs
core/src/domain/engine/command/: game_command.rs  mod.rs  player_command.rs  system_command.rs
core/src/domain/engine/command/dealer/: deal_initial_cards.rs  mod.rs  open_betting.rs  play_hand.rs  settle_round.rs
core/src/domain/engine/command/player/: hit.rs  join_table.rs  leave_seat.rs  leave_table.rs  mod.rs  place_bet.rs  stand.rs  take_seat.rs
core/src/domain/engine/command/system/: close_table.rs  mod.rs  player_timeout.rs
core/src/domain/engine/event/: game_event.rs  mod.rs  outcome.rs  payload.rs
core/src/domain/hand/: mod.rs
core/src/domain/player/: mod.rs  player_state.rs
core/src/domain/table/: mod.rs
frontend/src/: App.tsx
migrations/: 1771453859_create_tables_table.sql  1771453860_seed_test_tables.sql
server/: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  openapi.json
server/.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
server/configuration/: base.yml  production.yml
server/examples/: load_test.rs
server/src/: config.rs  lib.rs  main.rs
server/src/auth/: mod.rs  password.rs
server/src/protocol/: mod.rs
server/src/routes/: health.rs  mod.rs  table.rs  ws.rs
server/src/session/: in_memory.rs  mod.rs  summary.rs  table_actor.rs
server/src/store/: mod.rs  table_store.rs
server/src/wallet/: in_memory.rs  mod.rs
server/tests/: openapi_schema.rs
