[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
blackjack-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indoc = "2"
