[package]
name = "cli"
version = "0.1.1"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
bj-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indoc = "2"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ulid = { version = "1", features = ["serde"] }
futures-util = "0.3"
throbber-widgets-tui = "0.11"
