[package]
name = "blackjack-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
uuid = { version = "1.21.0", features = ["v7", "serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "json", "runtime-tokio", "uuid"] }
