[package]
name = "bj-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
ulid = { version = "1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "game_engine"
harness = false
