[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
