[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.19"
blackjack-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "migrate", "uuid"] }
derive = "1.0.0"
async-trait = "0.1.89"
thiserror = "2.0.18"
color-eyre = "0.6.5"
