[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bj-core = { path = "../core" }
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
color-eyre = "0.6.5"
ulid = { version = "1", features = ["serde"] }
dashmap = "6"
sqlx = { version = "0.8", features = ["postgres", "macros", "runtime-tokio", "migrate"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
secrecy = "0.10.3"
